--- a/_pages/education.html
+++ b/_pages/education.html
@@ -5,4 +5,25 @@ permalink: /education/
 author_profile: true
 ---
 
-*test
+## Education
+
+### M.Sc. Artificial Intelligence and Robotics  
+**Persian Gulf University, Bushehr, Iran**  
+*Sep 2022 - May 2025*  
+- **Total GPA:** 17.86/20.00 (Ranked 1st among graduating class)  
+- **Thesis:** Chest X-ray Report Generation by Combining VLMs, Classifier Prompts, and Shortcut Bias Mitigation  
+  - **Supervisor:** [Prof. Habib Rostami](https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works)  
+  - **Advisor:** [Prof. Ahmad Keshavarz](https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en)  
+- **Coursework:**  
+  - Machine Learning, Deep Learning, Pattern Recognition, Data Mining  
+  - Natural Language Processing, Algorithms Design, Image Processing  
+  - Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence  
+
+### B.Sc. Civil Engineering  
+**Persian Gulf University, Bushehr, Iran**  
+*Sep 2016 - Mar 2022*  
+- **Total GPA:** 14.64/20.00  
+- **Final Project:** Structural Analysis and Design, Highway Design, Earthquake Data Analysis  
+  - [Project Repository](https://github.com/mbrz97/BSc_Projects)  
+- **Relevant Coursework:** MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics  
+
