--- a/_pages/education.html
+++ b/_pages/education.html
@@ -5,25 +5,57 @@ permalink: /education/
 author_profile: true
 ---
 
-## Education
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Education</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        .education {
+            margin-bottom: 20px;
+        }
+        .degree {
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .university {
+            font-style: italic;
+        }
+        .details {
+            margin-left: 20px;
+        }
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="education">
+        <p class="degree">M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></p>
+        <p class="university">Persian Gulf University, Bushehr, Iran</p>
+        <div class="details">
+            <p><strong>Total GPA:</strong> 17.86 out of 20.00 (ranked 1st among graduating class)</p>
+            <p><strong>Thesis:</strong> Chest X-ray Report Generation by Combining VLMs, Classifier Prompts, and Shortcut Bias Mitigation</p>
+            <p><strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works" target="_blank">Prof. Habib Rostami</a>, <strong>Advisor:</strong> <a href="https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en" target="_blank">Prof. Ahmad Keshavarz</a></p>
+            <p><strong>Coursework:</strong> Machine Learning, Deep Learning, Pattern Recognition, Data Mining, Natural Language Processing, Algorithms Design, Image Processing, Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence</p>
+        </div>
+    </div>
 
-### M.Sc. Artificial Intelligence and Robotics  
-**Persian Gulf University, Bushehr, Iran**  
-*Sep 2022 - May 2025*  
-- **Total GPA:** 17.86/20.00 (Ranked 1st among graduating class)  
-- **Thesis:** Chest X-ray Report Generation by Combining VLMs, Classifier Prompts, and Shortcut Bias Mitigation  
-  - **Supervisor:** [Prof. Habib Rostami](https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works)  
-  - **Advisor:** [Prof. Ahmad Keshavarz](https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en)  
-- **Coursework:**  
-  - Machine Learning, Deep Learning, Pattern Recognition, Data Mining  
-  - Natural Language Processing, Algorithms Design, Image Processing  
-  - Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence  
-
-### B.Sc. Civil Engineering  
-**Persian Gulf University, Bushehr, Iran**  
-*Sep 2016 - Mar 2022*  
-- **Total GPA:** 14.64/20.00  
-- **Final Project:** Structural Analysis and Design, Highway Design, Earthquake Data Analysis  
-  - [Project Repository](https://github.com/mbrz97/BSc_Projects)  
-- **Relevant Coursework:** MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics  
-
+    <div class="education">
+        <p class="degree">B.Sc. Civil Engineering <span>(Sep 2016 - Mar 2022)</span></p>
+        <p class="university">Persian Gulf University, Bushehr, Iran</p>
+        <div class="details">
+            <p><strong>Total GPA:</strong> 14.64 out of 20.00</p>
+            <p><strong>Final project:</strong> Structural Analysis and Design, Highway Design, Earthquake Data Analysis <a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub Link]</a></p>
+            <p><strong>Relevant Coursework:</strong> MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics</p>
+        </div>
+    </div>
+</body>
+</html>
