--- a/_pages/education.html
+++ b/_pages/education.html
@@ -18,7 +18,7 @@ author_profile: true
             line-height: 1.6;
         }
         .education {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         .degree {
             font-size: 18px;
@@ -34,6 +34,9 @@ author_profile: true
             color: blue;
             text-decoration: none;
         }
+        ul {
+            margin-top: 5px;
+        }
     </style>
 </head>
 <body>
@@ -41,10 +44,12 @@ author_profile: true
         <p class="degree">M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></p>
         <p class="university">Persian Gulf University, Bushehr, Iran</p>
         <div class="details">
-            <p><strong>Total GPA:</strong> 17.86 out of 20.00 (ranked 1st among graduating class)</p>
-            <p><strong>Thesis:</strong> Chest X-ray Report Generation by Combining VLMs, Classifier Prompts, and Shortcut Bias Mitigation</p>
-            <p><strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works" target="_blank">Prof. Habib Rostami</a>, <strong>Advisor:</strong> <a href="https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en" target="_blank">Prof. Ahmad Keshavarz</a></p>
-            <p><strong>Coursework:</strong> Machine Learning, Deep Learning, Pattern Recognition, Data Mining, Natural Language Processing, Algorithms Design, Image Processing, Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence</p>
+            <ul>
+                <li><strong>Total GPA:</strong> 17.86 out of 20.00 (ranked 1st among graduating class)</li>
+                <li><strong>Thesis:</strong> Chest X-ray Report Generation by Combining VLMs, Prompts, and Shortcut Bias Mitigation</li>
+                <li><strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works" target="_blank">Prof. Habib Rostami</a>, <strong>Advisor:</strong> <a href="https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en" target="_blank">Prof. Ahmad Keshavarz</a></li>
+                <li><strong>Coursework:</strong> Machine Learning, Deep Learning, Pattern Recognition, Data Mining, Natural Language Processing, Algorithms Design, Image Processing, Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence</li>
+            </ul>
         </div>
     </div>
 
@@ -52,10 +57,13 @@ author_profile: true
         <p class="degree">B.Sc. Civil Engineering <span>(Sep 2016 - Mar 2022)</span></p>
         <p class="university">Persian Gulf University, Bushehr, Iran</p>
         <div class="details">
-            <p><strong>Total GPA:</strong> 14.64 out of 20.00</p>
-            <p><strong>Final project:</strong> Structural Analysis and Design, Highway Design, Earthquake Data Analysis <a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub Link]</a></p>
-            <p><strong>Relevant Coursework:</strong> MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics</p>
+            <ul>
+                <li><strong>Total GPA:</strong> 14.64 out of 20.00</li>
+                <li><strong>Final project:</strong> Earthquake Data Analysis, Structural Analysis, Highway Design<a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub Link]</a></li>
+                <li><strong>Relevant Coursework:</strong> MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics</li>
+            </ul>
         </div>
     </div>
 </body>
 </html>
+
