--- a/_pages/education.html
+++ b/_pages/education.html
@@ -5,6 +5,8 @@ permalink: /education/
 author_profile: true
 ---
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,22 +19,21 @@ author_profile: true
             margin: 20px;
             line-height: 1.6;
         }
+        .container {
+            margin-left: 100px; /* Moves content to the right */
+        }
         .education {
-            margin-bottom: 10px;
-            margin-left: 80px;
+            margin-bottom: 20px;
         }
         .degree {
             font-size: 18px;
             font-weight: bold;
-            margin-left: 80px;
-
         }
         .university {
             font-style: italic;
-            margin-left: 80px;            
         }
         .details {
-            margin-left: 100px;
+            margin-left: 20px;
         }
         a {
             color: blue;
@@ -44,30 +45,31 @@ author_profile: true
     </style>
 </head>
 <body>
-    <div class="education">
-        <p class="degree">M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></p>
-        <p class="university">Persian Gulf University, Bushehr, Iran</p>
-        <div class="details">
-            <ul>
-                <li><strong>Total GPA:</strong> 17.86 out of 20.00 (ranked 1st among graduating class)</li>
-                <li><strong>Thesis:</strong> Chest X-ray Report Generation by Combining VLMs, Prompts, and Shortcut Bias Mitigation</li>
-                <li><strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works" target="_blank">Prof. Habib Rostami</a>, <strong>Advisor:</strong> <a href="https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en" target="_blank">Prof. Ahmad Keshavarz</a></li>
-                <li><strong>Coursework:</strong> Machine Learning, Deep Learning, Pattern Recognition, Data Mining, Natural Language Processing, Algorithms Design, Image Processing, Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence</li>
-            </ul>
+    <div class="container">
+        <div class="education">
+            <p class="degree">M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></p>
+            <p class="university">Persian Gulf University, Bushehr, Iran</p>
+            <div class="details">
+                <ul>
+                    <li><strong>Total GPA:</strong> 17.86 out of 20.00 (ranked 1st among graduating class)</li>
+                    <li><strong>Thesis:</strong> Chest X-ray Report Generation by Combining VLMs, Classifier Prompts, and Shortcut Bias Mitigation</li>
+                    <li><strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works" target="_blank">Prof. Habib Rostami</a>, <strong>Advisor:</strong> <a href="https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en" target="_blank">Prof. Ahmad Keshavarz</a></li>
+                    <li><strong>Coursework:</strong> Machine Learning, Deep Learning, Pattern Recognition, Data Mining, Natural Language Processing, Algorithms Design, Image Processing, Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence</li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <div class="education">
-        <p class="degree">B.Sc. Civil Engineering <span>(Sep 2016 - Mar 2022)</span></p>
-        <p class="university">Persian Gulf University, Bushehr, Iran</p>
-        <div class="details">
-            <ul>
-                <li><strong>Total GPA:</strong> 14.64 out of 20.00</li>
-                <li><strong>Final project:</strong> Earthquake Data Analysis, Structural Analysis, Highway Design<a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub Link]</a></li>
-                <li><strong>Relevant Coursework:</strong> MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics</li>
-            </ul>
+        <div class="education">
+            <p class="degree">B.Sc. Civil Engineering <span>(Sep 2016 - Mar 2022)</span></p>
+            <p class="university">Persian Gulf University, Bushehr, Iran</p>
+            <div class="details">
+                <ul>
+                    <li><strong>Total GPA:</strong> 14.64 out of 20.00</li>
+                    <li><strong>Final project:</strong> Structural Analysis and Design, Highway Design, Earthquake Data Analysis <a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub Link]</a></li>
+                    <li><strong>Relevant Coursework:</strong> MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
 </html>
-
