--- a/_pages/education.html
+++ b/_pages/education.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Education"
+title: ""
 permalink: /education/
 author_profile: true
 ---
@@ -22,11 +22,14 @@ author_profile: true
         .container {
             margin-left: 100px; /* Moves content to the right */
         }
+        .pagetitle{
+            font-size: 30px;
+        }
         .education {
             margin-bottom: 20px;
         }
         .degree {
-            font-size: 18px;
+            font-size: 24px;
             font-weight: bold;
         }
         .university {
@@ -47,6 +50,7 @@ author_profile: true
 <body>
     <div class="container">
         <div class="education">
+            <p class="pagetitle">Education</p>
             <p class="degree">M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></p>
             <p class="university">Persian Gulf University, Bushehr, Iran</p>
             <div class="details">
