--- a/_pages/education.html
+++ b/_pages/education.html
@@ -23,7 +23,8 @@ author_profile: true
             margin-left: 100px; /* Moves content to the right */
         }
         .pagetitle{
-            font-size: 30px;
+            font-size: 40px;
+            font-weight: bold;
         }
         .education {
             margin-bottom: 20px;
@@ -34,6 +35,7 @@ author_profile: true
         }
         .university {
             font-style: italic;
+            margin-top: 1px;
         }
         .details {
             margin-left: 20px;
