--- a/_pages/education.html
+++ b/_pages/education.html
@@ -71,7 +71,7 @@ author_profile: true
             <div class="details">
                 <ul>
                     <li><strong>Total GPA:</strong> 14.64 out of 20.00</li>
-                    <li><strong>Final project:</strong> Structural Analysis and Design, Highway Design, Earthquake Data Analysis <a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub Link]</a></li>
+                    <li><strong>Final project:</strong> Structural Analysis and Design, Highway Design, Earthquake Data Analysis <a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub]</a></li>
                     <li><strong>Relevant Coursework:</strong> MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics</li>
                 </ul>
             </div>
