--- a/_pages/education.html
+++ b/_pages/education.html
@@ -32,6 +32,7 @@ author_profile: true
         .degree {
             font-size: 24px;
             font-weight: bold;
+            margin-bottom: 1px;
         }
         .university {
             font-style: italic;
