--- a/_pages/education.html
+++ b/_pages/education.html
@@ -25,6 +25,7 @@ author_profile: true
         .pagetitle{
             font-size: 40px;
             font-weight: bold;
+            margin-bottom: 5px;
         }
         .education {
             margin-bottom: 10px;
@@ -33,6 +34,7 @@ author_profile: true
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 1px;
+            margin-top: 1px;
         }
         .university {
             font-style: italic;
