--- a/_pages/about.html
+++ b/_pages/about.html
@@ -67,7 +67,7 @@ author_profile: true
             <li>• XAI</li>
         </ul>
         
-        <a href="your_cv_link_here.pdf" class="button" target="_blank">Download CV</a>
+        <a href="https://mbrz97.github.io/files/Mohammad_Barzegar_CV.pdf" class="button" target="_blank">Download CV</a>
     </div>
 </body>
 </html>
