--- a/_pages/about.html
+++ b/_pages/about.html
@@ -12,10 +12,16 @@ author_profile: true
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <style>
-        body {
+        html, body {
             font-family: Arial, sans-serif;
-            margin: 40px;
             line-height: 1.6;
+            overflow-x: hidden;
+            margin: 0;
+            padding: 0;
+            max-width: 100%;
+        }
+        * {
+            box-sizing: border-box;
         }
         .container {
             max-width: 800px;
