--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,7 +4,6 @@ title: ""
 author_profile: true
 ---
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,6 +21,10 @@ author_profile: true
         }
         * {
             box-sizing: border-box;
+        }
+        img, video, iframe {
+            max-width: 100%;
+            height: auto;
         }
         .container {
             max-width: 800px;
