--- a/_pages/about.html
+++ b/_pages/about.html
@@ -30,7 +30,11 @@ author_profile: true
             max-width: 800px;
             margin: auto;
         }
-        h1, h2 {
+        h1 {
+            color: #333;
+            margin-top: 50px; /* Added margin to move "About Me" down */
+        }
+        h2 {
             color: #333;
         }
         .research-interests {
