--- a/_pages/education.html
+++ b/_pages/education.html
@@ -5,8 +5,6 @@ permalink: /education/
 author_profile: true
 ---
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +24,7 @@ author_profile: true
             font-size: 40px;
             font-weight: bold;
             margin-bottom: 5px;
+            margin-top: 50px; /* Added margin to move "Education" down */
         }
         .education {
             margin-bottom: 10px;
