--- a/_pages/education.html
+++ b/_pages/education.html
@@ -16,6 +16,15 @@ author_profile: true
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
+            overflow-x: hidden; /* Disable horizontal scrolling */
+            max-width: 100%;
+        }
+        * {
+            box-sizing: border-box;
+        }
+        img, video, iframe {
+            max-width: 100%;
+            height: auto;
         }
         .container {
             margin-left: 100px; /* Moves content to the right */
