--- a/_pages/education.html
+++ b/_pages/education.html
@@ -14,7 +14,8 @@ author_profile: true
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
             line-height: 1.6;
             overflow-x: hidden; /* Disable horizontal scrolling */
             max-width: 100%;
