--- a/_pages/education.html
+++ b/_pages/education.html
@@ -30,7 +30,7 @@ author_profile: true
         .container {
             margin-left: 100px; /* Moves content to the right */
         }
-        .pagetitle{
+        h1 {
             font-size: 40px;
             font-weight: bold;
             margin-bottom: 5px;
@@ -39,7 +39,7 @@ author_profile: true
         .education {
             margin-bottom: 10px;
         }
-        .degree {
+        h2 {
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 1px;
@@ -63,9 +63,9 @@ author_profile: true
 </head>
 <body>
     <div class="container">
+        <h1>Education</h1>
         <div class="education">
-            <p class="pagetitle">Education</p>
-            <p class="degree">M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></p>
+            <h2>M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></h2>
             <p class="university">Persian Gulf University, Bushehr, Iran</p>
             <div class="details">
                 <ul>
@@ -78,7 +78,7 @@ author_profile: true
         </div>
 
         <div class="education">
-            <p class="degree">B.Sc. Civil Engineering <span>(Sep 2016 - Mar 2022)</span></p>
+            <h2>B.Sc. Civil Engineering <span>(Sep 2016 - Mar 2022)</span></h2>
             <p class="university">Persian Gulf University, Bushehr, Iran</p>
             <div class="details">
                 <ul>
