--- a/_pages/education.html
+++ b/_pages/education.html
@@ -12,12 +12,12 @@ author_profile: true
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
     <style>
-        body {
+        html, body {
             font-family: Arial, sans-serif;
+            line-height: 1.6;
+            overflow-x: hidden;
             margin: 0;
             padding: 0;
-            line-height: 1.6;
-            overflow-x: hidden; /* Disable horizontal scrolling */
             max-width: 100%;
         }
         * {
@@ -28,26 +28,24 @@ author_profile: true
             height: auto;
         }
         .container {
-            margin-left: 100px; /* Moves content to the right */
+            max-width: 800px;
+            margin: auto;
         }
         h1 {
+            color: #333;
             font-size: 40px;
             font-weight: bold;
-            margin-bottom: 5px;
-            margin-top: 50px; /* Added margin to move "Education" down */
-        }
-        .education {
-            margin-bottom: 10px;
+            margin-top: 50px;
+            text-align: center;
         }
         h2 {
+            color: #333;
             font-size: 24px;
             font-weight: bold;
-            margin-bottom: 1px;
-            margin-top: 1px;
+            margin-top: 20px;
         }
         .university {
             font-style: italic;
-            margin-top: 1px;
         }
         .details {
             margin-left: 20px;
@@ -57,7 +55,23 @@ author_profile: true
             text-decoration: none;
         }
         ul {
-            margin-top: 5px;
+            list-style-type: none;
+            padding: 0;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -65,7 +79,7 @@ author_profile: true
     <div class="container">
         <h1>Education</h1>
         <div class="education">
-            <h2>M.Sc. Artificial Intelligence and Robotics <span>(Sep 2022 - May 2025)</span></h2>
+            <h2>M.Sc. Artificial Intelligence and Robotics (Sep 2022 - May 2025)</h2>
             <p class="university">Persian Gulf University, Bushehr, Iran</p>
             <div class="details">
                 <ul>
@@ -78,7 +92,7 @@ author_profile: true
         </div>
 
         <div class="education">
-            <h2>B.Sc. Civil Engineering <span>(Sep 2016 - Mar 2022)</span></h2>
+            <h2>B.Sc. Civil Engineering (Sep 2016 - Mar 2022)</h2>
             <p class="university">Persian Gulf University, Bushehr, Iran</p>
             <div class="details">
                 <ul>
