--- a/_pages/education.html
+++ b/_pages/education.html
@@ -36,7 +36,7 @@ author_profile: true
             font-size: 40px;
             font-weight: bold;
             margin-top: 50px;
-            text-align: center;
+            text-align: left;
         }
         h2 {
             color: #333;
