--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -34,7 +34,7 @@ author_profile: true
             font-size: 40px;
             font-weight: bold;
             margin-top: 50px;
-            text-align: center;
+            text-align: left;
         }
         h2 {
             color: #333;
