--- a/_pages/skills.html
+++ b/_pages/skills.html
@@ -80,7 +80,91 @@ author_profile: true
         <h1>Languages</h1>
         <div class="details">
             <ul>
-                <li><strong>English:</strong> Proficient (C2) – IELTS Academic Band 8.5 (Listening: 8.5, Reading: 8.0, Writing: 8.0, Speaking: 8.5)</li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skills, Languages, and Courses</title>
+    <style>
+        html, body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            overflow-x: hidden;
+            margin: 0;
+            padding: 0;
+            max-width: 100%;
+        }
+        * {
+            box-sizing: border-box;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #333;
+            font-weight: bold;
+        }
+        h1 {
+            font-size: 40px;
+            margin-top: 50px;
+        }
+        h2 {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+        .details {
+            margin-left: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Skills</h1>
+        <div class="details">
+            <ul>
+                <li><strong>Languages and Software:</strong> Python, MATLAB, Kotlin, Java, SQL, Bash, Latex</li>
+                <li><strong>Concepts and Technologies:</strong> TensorFlow, Keras, PyTorch, Scikit-learn, Pandas, NumPy, Git, OpenCV, NLTK, Natural Language Processing, Deep Learning, Linux, Image Processing, Medical Image Analysis</li>
+            </ul>
+        </div>
+        
+        <h1>Languages</h1>
+        <div class="details">
+            <ul>
+                <li><strong>English:</strong> Proficient (C2)
+                    <ul>
+                        <li><a href="https://mbrz97.github.io/files/ielts.jpeg">IELTS Academic Band 8.5</a></li>
+                        <li>Listening: 8.5</li>
+                        <li>Reading: 8.0</li>
+                        <li>Writing: 8.0</li>
+                        <li>Speaking: 8.5</li>
+                    </ul>
+                </li>
                 <li><strong>Persian:</strong> Native (C2)</li>
                 <li><strong>German:</strong> Basic (A1)</li>
             </ul>
@@ -89,11 +173,11 @@ author_profile: true
         <h1>Workshops and Courses</h1>
         <div class="details">
             <ul>
-                <li><a href="[hyperlink]">Deep Learning Models’ Explainability and Interpretability - IBCSAIDS2024</a></li>
-                <li><a href="[hyperlink]">Challenges of Code Generation using Neural Networks - IBCAIDS2024</a></li>
-                <li><a href="[hyperlink]">Introduction to Python Programming (University of Pennsylvania) - Coursera</a></li>
-                <li><a href="[hyperlink]">Supervised Machine Learning: Regression and Classification (DeepLearning.AI, Stanford) - Coursera</a></li>
-                <li><a href="[hyperlink]">The Complete Android 12 & Kotlin Development Masterclass - Udemy</a></li>
+                <li><a href="http://new.vcert.ir/users/preview_cert.php?c=IBCAIDS1-W00020167&preview">Deep Learning Models’ Explainability and Interpretability - IBCSAIDS2024</a></li>
+                <li><a href="https://new.vcert.ir/users/preview_cert.php?c=IBCAIDS1-W00030248&preview">Challenges of Code Generation using Neural Networks - IBCAIDS2024</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/2X2AHQNYPUT6">Introduction to Python Programming (University of Pennsylvania) - Coursera</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/CDUN9RS6RCEJ">Supervised Machine Learning: Regression and Classification (DeepLearning.AI, Stanford) - Coursera</a></li>
+                <li><a href="https://www.udemy.com/certificate/UC-c3177371-66f4-4d94-811a-4ee1c1ac95be/">The Complete Android 12 & Kotlin Development Masterclass - Udemy</a></li>
             </ul>
         </div>
     </div>
