--- a/_pages/skills.html
+++ b/_pages/skills.html
@@ -148,8 +148,20 @@ author_profile: true
         <h1>Skills</h1>
         <div class="details">
             <ul>
-                <li><strong>Languages and Software:</strong> Python, MATLAB, Kotlin, Java, SQL, Bash, Latex</li>
-                <li><strong>Concepts and Technologies:</strong> TensorFlow, Keras, PyTorch, Scikit-learn, Pandas, NumPy, Git, OpenCV, NLTK, Natural Language Processing, Deep Learning, Linux, Image Processing, Medical Image Analysis</li>
+                <li><strong>English:</strong> Proficient (C2)
+                    <ul>
+                        <li><a href="[hyperlink]">IELTS Academic Band 8.5</a>
+                            <ul>
+                                <li>Listening: 8.5</li>
+                                <li>Reading: 8.0</li>
+                                <li>Writing: 8.0</li>
+                                <li>Speaking: 8.5</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Persian:</strong> Native (C2)</li>
+                <li><strong>German:</strong> Basic (A1)</li>
             </ul>
         </div>
         
