--- a/_pages/skills.html
+++ b/_pages/skills.html
@@ -89,7 +89,7 @@ author_profile: true
             <ul>
                 <li><strong>English:</strong> Proficient (C2)
                     <ul>
-                        <li><a href="[hyperlink]">IELTS Academic Band 8.5</a>
+                        <li><a href="https://mbrz97.github.io/files/ielts.jpeg">IELTS Academic Band 8.5</a>
                             <ul>
                                 <li>Listening: 8.5</li>
                                 <li>Reading: 8.0</li>
@@ -107,11 +107,11 @@ author_profile: true
         <h1>Workshops and Courses</h1>
         <div class="details">
             <ul>
-                <li><a href="[hyperlink]">Deep Learning Models’ Explainability and Interpretability - IBCSAIDS2024</a></li>
-                <li><a href="[hyperlink]">Challenges of Code Generation using Neural Networks - IBCAIDS2024</a></li>
-                <li><a href="[hyperlink]">Introduction to Python Programming (University of Pennsylvania) - Coursera</a></li>
-                <li><a href="[hyperlink]">Supervised Machine Learning: Regression and Classification (DeepLearning.AI, Stanford) - Coursera</a></li>
-                <li><a href="[hyperlink]">The Complete Android 12 & Kotlin Development Masterclass - Udemy</a></li>
+                <li><a href="http://new.vcert.ir/users/preview_cert.php?c=IBCAIDS1-W00020167&preview">Deep Learning Models’ Explainability and Interpretability - IBCSAIDS2024</a></li>
+                <li><a href="https://new.vcert.ir/users/preview_cert.php?c=IBCAIDS1-W00030248&preview">Challenges of Code Generation using Neural Networks - IBCAIDS2024</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/2X2AHQNYPUT6">Introduction to Python Programming (University of Pennsylvania) - Coursera</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/certificate/CDUN9RS6RCEJ">Supervised Machine Learning: Regression and Classification (DeepLearning.AI, Stanford) - Coursera</a></li>
+                <li><a href="https://www.udemy.com/certificate/UC-c3177371-66f4-4d94-811a-4ee1c1ac95be/">The Complete Android 12 & Kotlin Development Masterclass - Udemy</a></li>
             </ul>
         </div>
     </div>
