--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,7 +3,6 @@ title: ""
 permalink: /contact/
 author_profile: true
 ---
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,20 +11,36 @@ author_profile: true
     <title>Contact</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
-        body {
+        html, body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
+            line-height: 1.6;
+            overflow-x: hidden;
+            margin: 0;
+            padding: 0;
+            max-width: 100%;
         }
-        .contact-container {
-            background: #fff;
+        * {
+            box-sizing: border-box;
+        }
+        img, video, iframe {
+            max-width: 100%;
+            height: auto;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
             padding: 20px;
+            background: #fff;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            text-align: left;
+        }
+        h2 {
+            color: #333;
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 20px;
+            text-align: left;
         }
         .contact-item {
             display: flex;
@@ -44,7 +59,7 @@ author_profile: true
     </style>
 </head>
 <body>
-    <div class="contact-container">
+    <div class="container">
         <h2>Contact Me</h2>
         <div class="contact-item">
             <i class="fas fa-envelope"></i>
