--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -28,7 +28,7 @@ author_profile: true
         }
         .container {
             max-width: 800px;
-            margin: auto;
+            margin: 50px;
             padding: 20px;
             background: #fff;
             border-radius: 10px;
