--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -92,8 +92,7 @@ author_profile: true
         <h1>Work Experience</h1>
         
         <div class="experience">
-            <h2>Research and Applications Engineer - Plugzio Power Inc. (Jun 2023 - Present)</h2>
-            <p><strong>Vancouver, BC, Canada (Remote)</strong></p>
+            <h2>Research and Applications Engineer - Private International Startup (Jun 2023 - Present)</h2>
             <ul>
                 <li>Analyzed EV charging data to identify peak usage hours and optimize pricing strategies to ensure profitability.</li>
                 <li>Performed root cause analysis to detect and prevent potential equipment failures.</li>
