--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -58,7 +58,8 @@ author_profile: true
         <h1>Research Experience</h1>
         
         <div class="experience">
-            <h2>Research Assistant - Persian Gulf University (Mar 2023 - Present)</h2>
+            <h2>Research Assistant - Persian Gulf University</h2>
+            <p><strong>Mar 2023 - Present</strong>
             <p><strong>Laboratory of AI and Intelligent Health, Bushehr, Iran</strong></p>
             <ul>
                 <li>Contributed to various research projects, details included in the publications section.</li>
