--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -65,7 +65,7 @@ author_profile: true
                 <li>Contributed to various research projects, details included in the publications section.</li>
                 <li>Assisted in data preprocessing, model development, and analysis for a predictive maintenance project.</li>
                 <li>Engaged in cross-functional teamwork, presenting research findings at lab meetings.</li>
-                <li>Acted as an executive committee member of the IBCAIDS2024 scientific conference. <a href="#">[Website]</a></li>
+                <li>Acted as an executive committee member of the <a href="https://dsai2024.pgu.ac.ir/">IBCAIDS2024 scientific conference.</a></li>
             </ul>
         </div>
         
