--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -59,7 +59,7 @@ author_profile: true
         
         <div class="experience">
             <h2>Research Assistant - Persian Gulf University</h2>
-            <p><strong>Mar 2023 - Present</strong>
+            <p>Mar 2023 - Present
             <p><strong>Laboratory of AI and Intelligent Health, Bushehr, Iran</strong></p>
             <ul>
                 <li>Contributed to various research projects, details included in the publications section.</li>
