--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -58,9 +58,8 @@ author_profile: true
         <h1>Research Experience</h1>
         
         <div class="experience">
-            <h2>Research Assistant - Persian Gulf University</h2>
+            <h2>Research Assistant - Persian Gulf University</h2><i> (Mar 2023 - Present)</i>
             <p><strong>Laboratory of AI and Intelligent Health, Bushehr, Iran</strong></p>
-            <p>Mar 2023 - Present</p>
             <ul>
                 <li>• Contributed to various research projects, details included in the publications section.</li>
                 <li>• Assisted in data preprocessing, model development, and analysis for a predictive maintenance project.</li>
