--- a/_pages/about.html
+++ b/_pages/about.html
@@ -72,7 +72,7 @@ author_profile: true
         
         <h2>Research Interests</h2>
         <ul class="research-interests">
-            <li>• Medical Imaging</li>
+            <li>• Medical Image Analysis</li>
             <li>• Vision-Language Models</li>
             <li>• Generative AI</li>
             <li>• Computer Vision</li>
