--- a/_pages/about.html
+++ b/_pages/about.html
@@ -66,7 +66,7 @@ author_profile: true
 <body>
     <div class="container">
         <h1>About Me</h1>
-        <p>I'm master's student in Artificial Intelligence in Persian Gulf University, Iran. As a machine learning researcher and an all-around engineer, I have a publication track record love digging into how AI can be used to tackle medical imaging challenges. My goal is to find ways to make healthcare more efficient with AI, through independent research as well as teaming up with experts from different fields. My main interests include medical vision-language models, generative AI, and making models more robust, but I'm always open to exploring new ideas.</p>
+        <p>I'm a master's student in Artificial Intelligence at Persian Gulf University, Iran. As a machine learning researcher and an all-around engineer, I have a publication track record and love digging into how AI can be used to tackle medical imaging challenges. My goal is to find ways to make healthcare more efficient with AI, through independent research as well as teaming up with experts from different fields. My main interests include medical vision-language models, generative AI, and making models more robust, but I'm always open to exploring new ideas.</p>
         
         <p>I'm open to collaborations and new challenges, so feel free to reach out!</p>
         
