--- a/_pages/education.html
+++ b/_pages/education.html
@@ -83,7 +83,7 @@ author_profile: true
             <div class="details">
                 <ul>
                     <li><strong>Total GPA:</strong> 17.86 out of 20.00 (ranked 1st among graduating class)</li>
-                    <li><strong>Thesis:</strong> Enhancing Chest X-ray Report Generation with Pathology-Guided Prompts and Vision-Language Shortcut Bias Mitigation</li> <a href="https://github.com/mbrz97/CXR-Image-Captioning" target="_blank">[GitHub]</a></li>
+                    <li><strong>Thesis:</strong> Enhancing Chest X-ray Report Generation with Pathology-Guided Prompts and Vision-Language Shortcut Bias Mitigation <a href="https://github.com/mbrz97/CXR-Image-Captioning" target="_blank">[GitHub]</a></li>
                     <li><strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?hl=en&user=s6FF_qsAAAAJ&view_op=list_works" target="_blank">Prof. Habib Rostami</a>, <strong>Advisor:</strong> <a href="https://scholar.google.com/citations?user=NeD822UAAAAJ&hl=en" target="_blank">Prof. Ahmad Keshavarz</a></li>
                     <li><strong>Coursework:</strong> Machine Learning, Deep Learning, Pattern Recognition, Data Mining, Natural Language Processing, Algorithms Design, Image Processing, Multi-Agent Systems, Reinforcement Learning, Artificial Intelligence</li>
                 </ul>
@@ -96,7 +96,7 @@ author_profile: true
             <div class="details">
                 <ul>
                     <li><strong>Total GPA:</strong> 14.64 out of 20.00</li>
-                    <li><strong>Final project:</strong> Structural Analysis and Design, Highway Design, Earthquake Data Analysis <a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub]</a></li>
+                    <li><strong>Final projects:</strong> Structural Analysis and Design, Highway Design, Earthquake Data Analysis <a href="https://github.com/mbrz97/BSc_Projects" target="_blank">[GitHub]</a></li>
                     <li><strong>Relevant Coursework:</strong> MATLAB, Statistics and Probabilities, Numerical Methods, Mechanics</li>
                 </ul>
             </div>
