--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -69,8 +69,9 @@ author_profile: true
         </div>
         
         <div class="publication">
-            <h2>A Dataset of Smartphone-Captured Throat Images for Bacterial and Viral Pharyngitis Classification</h2>
-            <p><strong>Submitted (1st revision)</strong></p>
+            <h2></h2>
+            <h2><a href="https://www.nature.com/articles/s41597-025-05780-5">A Dataset of Smartphone-Captured Throat Images for Bacterial and Viral Pharyngitis Classification</a></h2>
+            <p><strong>Scientific Data, August 2025</strong></p>
             <ul>
                 <li>Created a dataset by capturing throat images using smartphones for classifying Pharyngitis.</li>
                 <li>Collaborated with physicians to verify results, conducted technical validation, and wrote the manuscript.</li>
