--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -61,7 +61,7 @@ author_profile: true
         <h1>Research Experience</h1>
         
         <div class="experience">
-            <h2>Research Assistant - Persian Gulf University <u>(Mar 2023 - Present)</u></h2>
+            <h2>Research Assistant - Persian Gulf University <u>(Mar 2023 - Jul 2025)</u></h2>
             <p><strong>Laboratory of AI and Intelligent Health, Bushehr, Iran</strong></p>
             <ul>
                 <li>• Contributed to various research projects, details included in the publications section.</li>
@@ -96,7 +96,7 @@ author_profile: true
         <h1>Work Experience</h1>
         
         <div class="experience">
-            <h2>Data & Systems Lead (<u>Jun 2023 - Present</u>)</h2>
+            <h2>Research and Applications Engineer (<u>Jun 2023 - Aug 2025</u>)</h2>
             <p><strong>Plugzio Power Inc.</strong></p>
             <ul>
                 <li>• Collaborated with business and technical teams to define and implement internal data handling processes.</li>
