--- a/_pages/experiences.html
+++ b/_pages/experiences.html
@@ -79,7 +79,7 @@ author_profile: true
             <h2>Teaching Assistant - Persian Gulf University</h2>
             <p><strong>Faculty of Intelligent Systems Engineering and Data Science, Bushehr, Iran</strong></p>
             <ul>
-                <li>Held tutorials to convey concepts, applications, and assessed students in machine learning and statistics.</li>
+                <li>• Held tutorials to convey concepts, applications, and assessed students in machine learning and statistics.</li>
             </ul>
         </div>
         
